# tabuleiro-virtual

./: .bazelrc  BUILD  BUILD.bazel  LICENSE.txt  MODELOS.txt  MODULE.bazel  Makefile  NOTAS_ANDROID.txt  NOTAS_IOS.txt  NOTAS_LINUX.txt  NOTAS_MAC.txt  NOTAS_WINDOWS.txt  Principal.md  README.txt  RELEASE.txt  SConstruct  TODO.txt  TRADUCAO.txt  WORKSPACE  benchmark.cpp  converte_cube.sh  gera_mac.sh  gera_texturas_modelos_tabuleiros.sh  gera_tree_64.sh  instala_dlls.sh  main.cpp  qt.BUILD  qt.bzl  qt_configure.bzl  tabvirt.command  tabvirt.sh  teste_ent_util.sh  traduz.sh
TabuleiroVirtualOsx.xcodeproj/: project.pbxproj
acoes/: acoes.proto
android/: AndroidManifest.xml  assina.sh  compila.sh
android/assets/: phaerimm.binproto  purple_dragon_archer.binproto  purple_dragon_soldier.binproto
android/assets/dados/: acoes.asciiproto  controle_virtual.asciiproto  menumodelos.asciiproto  menumodelos_homebrew.asciiproto  menumodelos_nao_srd.asciiproto  menumodelosfeiticos.asciiproto  modelos.asciiproto  modelos_homebrew.asciiproto  modelos_nao_srd.asciiproto  tabelas.asciiproto  tabelas_homebrew.asciiproto  tabelas_nao_srd.asciiproto
android/assets/modelos3d/: arrow_demon.binproto  arrowhawk.binproto  axe.binproto  babau.binproto  baneguard.binproto  barghest.binproto  bat.binproto  beholder.binproto  black_pudding.binproto  black_tentacles.binproto  blinkdog.binproto  bodak.binproto  bulette.binproto  centipede.binproto  cloaker.binproto  cloud.binproto  daramos.binproto  dire_wolf.binproto  direguard.binproto  dretch.binproto  flail.binproto  gelatinous_cube.binproto  giant_ant.binproto  giant_stone.binproto  gibbering_mouther.binproto  glabrezu.binproto  gnome_germund.binproto  gnome_male.binproto  gnome_wizard.binproto  halo.binproto  hammer.binproto  heart.binproto  howler.binproto  human_aristocrat_female.binproto  human_aristocrat_male.binproto  human_commoner_female.binproto  human_commoner_male.binproto  human_female_kara.binproto  mantor.binproto  otyugh.binproto  (+17 more)
android/assets/shaders/: frag_caixa_ceu.c  frag_luz.backup.c  frag_luz.c  frag_luz_espec.c  frag_luz_por_vertice.c  frag_picking.c  frag_pontual.c  (+13 more)
android/jni/: Android.mk  Application.mk  jni-impl.cpp
arq/: BUILD  BUILD.bazel  arquivo.cpp  arquivo.h  arquivo_pc.cpp  arquivo_test.cpp
dados/: acoes.asciiproto  controle_virtual.asciiproto  menumodelos.asciiproto  menumodelos_homebrew.asciiproto  menumodelos_nao_srd.asciiproto  menumodelosfeiticos.asciiproto  modelos.asciiproto  modelos_homebrew.asciiproto  modelos_nao_srd.asciiproto  tabelas.asciiproto  tabelas_homebrew.asciiproto  tabelas_nao_srd.asciiproto
ent/: BUILD  BUILD.bazel  acoes.cpp  acoes.h  acoes.proto  acoes_test.cpp  aux.proto  comum.proto  constantes.cpp  constantes.h  controle_virtual.proto  ent_test.cpp  entidade.cpp  entidade.h  entidade.proto  entidade_composta.cpp  entidade_desenho.cpp  entidade_desenho.h  entidade_forma.cpp  formas.cpp  formas.h  formas.proto  movel.cpp  movel.h  parametrosdesenho.cpp  parametrosdesenho.h  recomputa.cpp  recomputa.h  tabelas.cpp  tabelas.h  tabelas.proto  tabuleiro.cpp  tabuleiro.h  tabuleiro.proto  tabuleiro_controle_virtual.cpp  tabuleiro_interface.cpp  tabuleiro_interface.h  tabuleiro_picking.cpp  tabuleiro_terreno.h  tabuleiro_tratador.cpp  (+7 more)
gl/: gl.cpp  gl.h
gltab/: BUILD  BUILD.bazel  gl.cpp  gl.h  gl_char.cpp  gl_comum.cpp  gl_es.cpp  gl_interno.h  gl_normal.cpp  gl_vbo.cpp  gl_vbo.h  glues.cpp  glues.h
goog/: BUILD.bazel  stringprintf.h  strutil.h
ifg/: BUILD  BUILD.bazel  interface.cpp  interface.h  modelos.proto  modelos_test.cpp  tecladomouse.cpp  tecladomouse.h
ifg/gl/: tabuleiro.cpp
ifg/imgui/: interface_imgui.cpp  interface_imgui.h
ifg/qt/: BUILD  aneis_util.h  armas_util.h  atualiza_ui.cpp  atualiza_ui.h  bonus.h  bonus_util.cpp  bonus_util.h  constantes.cpp  constantes.h  evento_util.h  feiticos_util.h  inimigo_predileto_util.h  itens_magicos_util.h  menuprincipal.cpp  menuprincipal.h  pericias_util.h  pocoes_util.h  principal.cpp  principal.h  qt_interface.cpp  qt_interface.h  som_qt.cpp  tabuleiro.cpp  talentos_util.h  texturas.cpp  texturas.h  util.cpp  util.h  visualizador3d.cpp  visualizador3d.h  visualizador3d_dialogos.cpp
ifg/qt/ui/: BUILD  Makefile  bonus_individual.h  bonus_individual.ui  cenario.h  cenario.ui  dialogo_bonus.ui  dialogobonus.h  entidade.h  entidade.ui  entradastring.h  entradastring.ui  forma.h  forma.ui  iluminacao.h  iluminacao.ui  listapaginada.h  listapaginada.ui  makeui.sh  opcoes.h  opcoes.ui  por_origem.h  por_origem.ui
include/ent/: entidade.h  movel.h  parametrosdesenho.h  tabuleiro.h
include/ntf/: notificacao.h
instalador/: tabvirt.iss  tabvirt.spec  tabvirt32.iss
log/: BUILD  BUILD.bazel  log.h
m3d/: BUILD  BUILD.bazel  m3d.cpp  m3d.h
macqt5bundle/Contents/: Info.plist
macqtbundle/Contents/: Info.plist
matrix/: BUILD  BUILD.bazel  matrices.cpp  matrices.h  vectors.h
modelos3d_nao_srd/: README
net/: BUILD  BUILD.bazel  cliente.cpp  cliente.h  servidor.cpp  servidor.h  socket.cpp  socket.h  socket_pure.cpp  util.cpp  util.h
ntf/: BUILD  BUILD.bazel  notificacao.cpp  notificacao.h  notificacao.proto
qtbuild/: BUILD  MODULE.bazel  qt.bzl
qtbuild/qt5/: BUILD
qtbuild/qt6/: BUILD  qt.bzl
shaders/: frag.c  frag_caixa_ceu.c  frag_luz.c  frag_luz_espec.c  frag_luz_por_vertice.c  frag_picking.c  frag_pontual.c  frag_preto_branco.c  frag_profundidade.c  frag_simples.c  vert.c  vert_caixa_ceu.c  vert_cor.c  vert_luz.c  vert_luz_model.c  vert_luz_por_vertice.c  vert_pontual.c  vert_preto_branco.c  vert_simples.c  vert_sombra.c
som/: BUILD  som.h  som_dummy.cpp  som_qt.cpp
tex/: BUILD  BUILD.bazel  picopng.cpp  texturas.cpp  texturas.h
tools/: protoc.py
traducoes/: tabuleiro_en.ts
win32/: TabuleiroVirtualWindows.sln  vcpkg.json
win32/Boost/: Boost.vcxproj
win32/EntidadeTest/: EntidadeTest.vcxproj
win32/TabuleiroVirtual/: .clang-format  Project1.vcxproj  Project1.vcxproj.filters
win32/TabuleiroVirtualBin/: TabuleiroVirtualBin.vcxproj
win32/Tests/: Tests.vcxproj
win32/UtilTest/: UtilTest.vcxproj
(+184 files in other folders)
