# Choose the most recent version available at
# https://registry.bazel.build/modules/abseil-cpp.
bazel_dep(name = "abseil-cpp", version = "20250127.1")
# Choose the most recent version available at
# https://registry.bazel.build/modules/googletest
bazel_dep(name = "googletest", version = "1.15.2")
# Choose the most recent version available at
# https://registry.bazel.build/modules/protobuf
bazel_dep(name = "protobuf", version = "33.1")

# Qt rules from git.
#bazel_dep(name = "com_justbuchanan_rules_qt")
#git_override(
#  module_name = "com_justbuchanan_rules_qt",
#  remote = "https://github.com/justbuchanan/bazel_rules_qt.git",
#  commit = "89290cc7962d697c31b361a0f62141ca13d062d2",
#  #branch = "master"
#)

# Boost
# Famous C++ library that has given rise to many new additions to the C++ Standard Library
# Makes @boost available for use: For example, add `@boost//:algorithm` to your deps.
# For more, see https://github.com/nelhage/rules_boost and https://www.boost.org
bazel_dep(name = "rules_boost", repo_name = "com_github_nelhage_rules_boost")
archive_override(
    module_name = "rules_boost",
    urls = ["https://github.com/nelhage/rules_boost/archive/refs/heads/master.tar.gz"],
    strip_prefix = "rules_boost-master",
    # It is recommended to edit the above URL and the below sha256 to point to a specific version of this repository.
    #integrity = "sha256-V4D80TY2mHWL3X/eJZ990SajiL5ODCu16rKasOthLds=",
)

non_module_boost_repositories = use_extension("@com_github_nelhage_rules_boost//:boost/repositories.bzl", "non_module_dependencies")
use_repo(
    non_module_boost_repositories,
    "boost",
)
