bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "rules_proto", version = "7.1.0")

# Choose the most recent version available at
# https://registry.bazel.build/modules/abseil-cpp.
bazel_dep(name = "abseil-cpp", version = "20250512.1")
# Choose the most recent version available at
# https://registry.bazel.build/modules/googletest
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
# Choose the most recent version available at
# https://registry.bazel.build/modules/protobuf
bazel_dep(name = "protobuf", version = "33.1")

bazel_dep(name = "platforms", version = "1.0.0")

# Boost
# Famous C++ library that has given rise to many new additions to the C++ Standard Library
# Makes @boost available for use: For example, add `@boost//:algorithm` to your deps.
# For more, see https://github.com/nelhage/rules_boost and https://www.boost.org
bazel_dep(name = "rules_boost", repo_name = "com_github_nelhage_rules_boost")
archive_override(
    module_name = "rules_boost",
    urls = ["https://github.com/nelhage/rules_boost/archive/refs/heads/master.tar.gz"],
    strip_prefix = "rules_boost-master",
    # It is recommended to edit the above URL and the below sha256 to point to a specific version of this repository.
    #integrity = "sha256-V4D80TY2mHWL3X/eJZ990SajiL5ODCu16rKasOthLds=",
)

non_module_boost_repositories = use_extension("@com_github_nelhage_rules_boost//:boost/repositories.bzl", "non_module_dependencies")
use_repo(
    non_module_boost_repositories,
    "boost",
)

bazel_dep(name = "qt")
local_path_override(
    module_name = "qt",
    path = "qtbuild",
)

# -- bazel_dep definitions -- #

# -- use_repo_rule statements -- #

# -- repo definitions -- #
