package(default_visibility = ["//visibility:public"])

cc_library(
  name = "ent_headers",
  hdrs = [
    "acoes.h",
    "constantes.h",
    "tabuleiro_interface.h",
    "tabuleiro_terreno.h",
    "watchdog.h",
    "entidade.h",
    "tabelas.h",
    "tabuleiro.h",
    "util.h",
  ],
  deps = [
    "//gltab",
    "//tex",
  ]
)

cc_library(
  name = "ent",
  srcs = [
    "tabuleiro_controle_virtual.cpp",
    "tabuleiro_picking.cpp",
    "tabuleiro.cpp",
    "tabuleiro_tratador.cpp",
    "watchdog.cpp",
    "tabelas.cpp",
    "tabuleiro_interface.cpp",
  ],
  hdrs = [
    "tabuleiro_interface.h",
    "tabuleiro_terreno.h",
    "watchdog.h",
    "entidade.h",
    "tabelas.h",
    "tabuleiro.h",
  ],
  copts = [],
  deps = [
    ":ent_cc_proto",
    "//gltab",
    "//goog",
    "//ifg",
    "//log",
    "//matrix",
    "//net",
    "//ntf",
    "//tex",
  ]
)

cc_library(
  name = "constantes",
  srcs = [
    "constantes.cpp",
  ],
  hdrs = [
    "constantes.h",
  ],
  copts = [],
  deps = [
  ]
)

cc_library(
  name = "util",
  srcs = [
    "util.cpp",
  ],
  hdrs = [
    "util.h",
  ],
  copts = [],
  deps = [
    ":ent_cc_proto",
    ":ent_headers",
    "//log",
    "//matrix",
    "//ntf:ntf_cc_proto",
  ]
)

cc_library(
  name = "entidade",
  srcs = [
    "entidade.cpp",
    "entidade_composta.cpp",
    "entidade_desenho.cpp",
    "entidade_forma.cpp",
  ],
  hdrs = [
    "entidade.h",
  ],
  copts = [],
  deps = [
    ":ent_headers",
    ":util",
    "//gltab",
    "//m3d",
  ]
)

cc_library(
  name = "acoes",
  srcs = [
    "acoes.cpp",
  ],
  hdrs = [
    "acoes.h",
  ],
  copts = [],
  deps = [
    ":ent_headers",
    ":util",
    "//gltab",
    "//goog",
    "//log",
    "//matrix",
    "//ntf",
  ]
)

cc_proto_library(
  name = "ent_cc_proto",
  deps = [":ent_proto"]
)

proto_library(
  name = "ent_proto",
  srcs = [
    "acoes.proto",
    "comum.proto",
    "controle_virtual.proto",
    "entidade.proto",
    "tabelas.proto",
    "tabuleiro.proto",
  ],
)
