package(default_visibility = ["//visibility:public"])

cc_library(
  name = "ifg",
  srcs = [
    "interface.cpp",
    "tecladomouse.cpp",
  ],
  hdrs = [
    "interface.h",
    "tecladomouse.h",
  ],
  copts = [],
  deps = [
    ":ifg_cc_proto",
    "//arq",
    "//ent:acoes",
    "//ntf",
  ]
)

cc_proto_library(
  name = "ifg_cc_proto",
  deps = [
    "ifg_proto"
  ],
)

proto_library(
  name = "ifg_proto",
  srcs = ["modelos.proto"],
)
